<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".CreateOrEditListActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingHorizontal="4dp"
        android:paddingVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/new_list"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/ivDeleteIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/ic_delete_black_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="4dp"
        android:layout_gravity="top"
        android:gravity="top">
    <EditText
        android:id="@+id/etListName"
        android:background="@drawable/edit_text_background"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:layout_marginTop="16dp"
        android:hint="@string/list_name" />

    <EditText
        android:id="@+id/etListDescription"
        android:background="@drawable/edit_text_background"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:layout_marginTop="8dp"
        android:hint="@string/list_description" />

    <Spinner
        android:id="@+id/spCategories"
        android:background="@drawable/spinner_background"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="4dp"
        android:paddingVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cbUrgent"
        android:text="@string/is_it_urgent"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"
            android:padding="12dp"
            app:cornerRadius="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_dark"
            android:padding="12dp"
            app:cornerRadius="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>